-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.10, 5.12.11, 5.15.5, 6.1.3, 6.2.0 Beta4
-
Ubuntu 18, Ubuntu 20.4
-
-
35235def29 (qt/qtvirtualkeyboard/dev) 35235def29 (qt/tqtc-qtvirtualkeyboard/dev) d439b64aa2 (qt/tqtc-qtvirtualkeyboard/5.15) ac0bef98eb (qt/qtvirtualkeyboard/6.4) ac0bef98eb (qt/tqtc-qtvirtualkeyboard/6.4) 22988ea152 (qt/qtvirtualkeyboard/6.3)
When QT_SCALE_FACTOR is set to 1.5,
the displayed keyboard area and operable area are mismatching.
Hence, some of the keys are not responding.
How to reproduce
1. Use Qt VirtualKeyboard basic example :
2. Add the following line right after qputenv("QT_IM_MODULE",QByteArray("qtvirtualkeyboard")); in main.cpp
qputenv("QT_SCALE_FACTOR", QByteArray("1.5"));
3. Press "I" then "O" or some other keyboard
Result :
"I" is output but other keyboard is not responding
- relates to
-
QTBUG-77342 Virtual keyboard may not work correctly if QT_SCALE_FACTOR is set to any number other than 1.
-
- Closed
-
-
QTBUG-94783 Popup menu in incorrect position when using QT_SCALE_FACTOR=1.5 on Wayland Ubuntu
-
- Closed
-
| For Gerrit Dashboard: QTBUG-94770 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 416235,2 | Remove platform-dependent codes for XCB | tqtc/lts-6.2 | qt/tqtc-qtvirtualkeyboard | Status: NEW | +1 | 0 |
| 370226,4 | macOS: convert mask region to native geometry | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 371191,2 | macOS: convert mask region to native geometry | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
| 371193,1 | macOS: convert mask region to native geometry | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: ABANDONED | 0 | 0 |
| 415887,6 | Remove platform-dependent codes for XCB | dev | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |
| 416231,2 | Remove platform-dependent codes for XCB | 6.4 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |
| 416232,3 | Remove platform-dependent codes for XCB | 6.3 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |
| 416256,3 | Remove platform-dependent codes for XCB | tqtc/lts-5.15 | qt/tqtc-qtvirtualkeyboard | Status: MERGED | +2 | 0 |