src/plugins/platforms/cocoa/qnsview.mm
@@ -63,6 +63,7 @@
 #include <private/qcoregraphics_p.h>
 #include <private/qwindow_p.h>
 #include <private/qpointingdevice_p.h>
+#include <private/qhighdpiscaling_p.h>
 #include "qcocoabackingstore.h"
 #ifndef QT_NO_OPENGL
 #include "qcocoaglcontext.h"
